templates/supervisor_template.yaml
---
# Source: supervisor/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-supervisor
  namespace: default
  labels:
    helm.sh/chart: supervisor-v2024.2.6
    app.kubernetes.io/name: supervisor
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.4"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  # Port used to expose admission webhook apiserver
  - name: api
    port: 443
    targetPort: 8443
  selector:
    app.kubernetes.io/name: supervisor
    app.kubernetes.io/instance: release-name
---
# Source: supervisor/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-supervisor
  namespace: default
  labels:
    helm.sh/chart: supervisor-v2024.2.6
    app.kubernetes.io/name: supervisor
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: supervisor
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: supervisor
        app.kubernetes.io/instance: release-name
      annotations:
        checksum/apiregistration.yaml: f66947f04283076adb94ab0cb8f26a95532caafe9c02aa6f4497bf35972d9685
    spec:
      
      serviceAccountName: release-name-supervisor
      containers:
      - name: operator
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 65534
          seccompProfile:
            type: RuntimeDefault
        image: ghcr.io/appscode/supervisor:v0.0.4
        imagePullPolicy: IfNotPresent
        args:
        - run
        - --v=3
        - --secure-port=8443
        - --audit-log-path=-
        - --tls-cert-file=/var/serving-cert/tls.crt
        - --tls-private-key-file=/var/serving-cert/tls.key
        - --use-kubeapiserver-fqdn-for-aks=true
        - --enable-validating-webhook=true
        - --enable-mutating-webhook=true
        - --max-concurrent-reconcile=5
        - --requeue-after-duration=1m
        - --retry-after-duration=1m
        - --before-deadline-duration=24h
        ports:
        - containerPort: 8443
        resources:
          {}
        volumeMounts:
        - mountPath: /var/serving-cert
          name: serving-cert
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 420
          secretName: release-name-supervisor-apiserver-cert
      securityContext:
        fsGroup: 65535
      nodeSelector:
        kubernetes.io/os: linux
---
# Source: supervisor/templates/mutating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutators.supervisor.appscode.com
  labels:
    helm.sh/chart: supervisor-v2024.2.6
    app.kubernetes.io/name: supervisor
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.4"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: recommendations.mutators.supervisor.appscode.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/mutators.supervisor.appscode.com/v1alpha1/recommendationwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - supervisor.appscode.com
        apiVersions:
          - "*"
        resources:
          - recommendations
    admissionReviewVersions: ["v1beta1"]
    failurePolicy: Fail
    sideEffects: None
---
# Source: supervisor/templates/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: validators.supervisor.appscode.com
  labels:
    helm.sh/chart: supervisor-v2024.2.6
    app.kubernetes.io/name: supervisor
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "v0.0.4"
    app.kubernetes.io/managed-by: Helm
webhooks:
  - name: maintenancewindows.validators.supervisor.appscode.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.supervisor.appscode.com/v1alpha1/maintenancewindowwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - supervisor.appscode.com
        apiVersions:
          - "*"
        resources:
          - maintenancewindows
    admissionReviewVersions: ["v1beta1"]
    failurePolicy: Fail
    sideEffects: None

  - name: clustermaintenancewindows.validators.supervisor.appscode.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.supervisor.appscode.com/v1alpha1/clustermaintenancewindowwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - supervisor.appscode.com
        apiVersions:
          - "*"
        resources:
          - clustermaintenancewindows
    admissionReviewVersions: ["v1beta1"]
    failurePolicy: Fail
    sideEffects: None

  - name: recommendations.validators.supervisor.appscode.com
    clientConfig:
      service:
        namespace: default
        name: kubernetes
        path: /apis/validators.supervisor.appscode.com/v1alpha1/recommendationwebhooks
      caBundle: dW5rbm93bg==
    rules:
      - operations:
          - CREATE
          - UPDATE
        apiGroups:
          - supervisor.appscode.com
        apiVersions:
          - "*"
        resources:
          - recommendations
    admissionReviewVersions: ["v1beta1"]
    failurePolicy: Fail
    sideEffects: None
